Updated information how to make language aware content types

--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -2,6 +2,11 @@
 Translating text strings
 ====================================
 
+.. contents ::
+
+Introduction
+------------
+
 Internationalization is a process to make your code locale and language aware.
 Usually this means supplying translation files for text strings
 used in the code.
