Updated all :: contents directives to use local ToC mode

--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -2,7 +2,7 @@
 Translating text strings
 ====================================
 
-.. contents ::
+.. contents :: :local:
 
 Introduction
 ------------
