Added the description

--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -2,6 +2,11 @@
 Translating text strings
 ====================================
 
+.. admonition:: Description
+
+        Translating Python and TAL template source code text strings using gettext
+        library and other Plone i18n facilities.
+
 .. contents :: :local:
 
 Introduction
