Generic updates, i18ndude info

--- a/source/i18n/language.txt
+++ b/source/i18n/language.txt
@@ -2,6 +2,10 @@
 Language functions
 ====================
 
+.. admonition:: Description
+
+        Acessing and changing the language state of Plone programmatically. 
+
 .. contents :: :local:
 
 Introduction
