Included skeleton of new i18n script and i18ndude installation instructions

--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -293,61 +293,72 @@ actual package of your product:
 
 .. code-block:: sh
 
-    #!/bin/sh
-    #
-    # Shell script to manage .po files.
-    #
-    # Run this file in the folder main __init__.py of product
-    #
-    # E.g. if your product is yourproduct.name
-    # you run this file in yourproduct.name/yourproduct/name
-    #
-    #
-    # Copyright 2009 Twinapex Research http://www.twinapex.com
-    #
-
-    # Assume the product name is the current folder name
-    CURRENT_PATH=`pwd`
-    CATALOGNAME="yourproduct.app"
-
-    # List of languages
-    LANGUAGES="en fi de"
-
-    # Create locales folder structure for languages
-    install -d locales
-    for lang in $LANGUAGES; do
-        install -d locales/$lang/LC_MESSAGES
-    done
-
-    # Rebuild .pot
-    i18ndude rebuild-pot --pot locales/$CATALOGNAME.pot --create $CATALOGNAME .
-
-    # Compile po files
-    for lang in $(find locales -mindepth 1 -maxdepth 1 -type d); do
-
-        if test -d $lang/LC_MESSAGES; then
-
-            PO=$lang/LC_MESSAGES/${CATALOGNAME}.po
-
-            # Create po file if not exists
-            touch $PO
-
-            # Sync po file
-            echo "Syncing $PO"
-            i18ndude sync --pot locales/$CATALOGNAME.pot $PO
-
-            # 
-
-            # Plone 3.3 and onwards do not need manual .po -> .mo compilation,
-            # but it will happen on start up.
-            # For more info see http://vincentfretin.ecreall.com/articles/my-translation-doesnt-show-up-in-plone-4
+        #!/bin/sh
+        #
+        # Shell script to manage .po files.
+        #
+        # Run this file in the folder main __init__.py of product
+        #
+        # E.g. if your product is yourproduct.name
+        # you run this file in yourproduct.name/yourproduct/name
+        #
+        #
+        # Copyright 2009 Twinapex Research http://www.twinapex.com
+        #
         
-            # Compile .po to .mo
-            # MO=$lang/LC_MESSAGES/${CATALOGNAME}.mo
-            # echo "Compiling $MO"
-            # msgfmt -o $MO $lang/LC_MESSAGES/${CATALOGNAME}.po
+        # Assume the product name is the current folder name
+        CURRENT_PATH=`pwd`
+        CATALOGNAME="yourproduct.app"
+        
+        # List of languages
+        LANGUAGES="en fi de"
+        
+        # Create locales folder structure for languages
+        install -d locales
+        for lang in $LANGUAGES; do
+            install -d locales/$lang/LC_MESSAGES
+        done
+        
+        # Assume i18ndude is installed with buildout
+        # and this script is run under src/ folder with two nested namespaces in the package name (like mfabrik.plonezohointegration)
+        I18NDUDE=../../../../bin/i18ndude
+        
+        if test ! -e $I18NDUDE; then
+                echo "You must install i18ndude with buildout"
+                echo "See http://svn.plone.org/svn/collective/collective.developermanual/trunk/source/i18n/localization.txt"
+                exit
         fi
-    done
+        
+        # Rebuild .pot
+        $I18NDUDE rebuild-pot --pot locales/$CATALOGNAME.pot --create $CATALOGNAME .
+        
+        
+        # Compile po files
+        for lang in $(find locales -mindepth 1 -maxdepth 1 -type d); do
+        
+            if test -d $lang/LC_MESSAGES; then
+        
+                PO=$lang/LC_MESSAGES/${CATALOGNAME}.po
+        
+                # Create po file if not exists
+                touch $PO
+        
+                # Sync po file
+                echo "Syncing $PO"
+                $I18NDUDE sync --pot locales/$CATALOGNAME.pot $PO
+        
+                # 
+        
+                # Plone 3.3 and onwards do not need manual .po -> .mo compilation,
+                # but it will happen on start up.
+                # For more info see http://vincentfretin.ecreall.com/articles/my-translation-doesnt-show-up-in-plone-4
+            
+                # Compile .po to .mo
+                # MO=$lang/LC_MESSAGES/${CATALOGNAME}.mo
+                # echo "Compiling $MO"
+                # msgfmt -o $MO $lang/LC_MESSAGES/${CATALOGNAME}.po
+            fi
+        done
 
 
 More information
