Updated localization script to point to the source page

--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -303,7 +303,9 @@ actual package of your product:
         # you run this file in yourproduct.name/yourproduct/name
         #
         #
-        # Copyright 2009 Twinapex Research http://www.twinapex.com
+        # Copyright 2010 mFabrik http://mfabrik.com
+        #
+        # http://plone.org/documentation/manual/plone-community-developer-documentation/i18n/localization
         #
         
         # Assume the product name is the current folder name
