--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -41,6 +41,37 @@ zope.i18n
 Plone (at least 3.3) uses only file path and name to search the translation files.
 Information in the .po file headers is ignored.
 
+Generating a .pot template file for your package(s)
+===================================================
+
+infrae.i18nextract can be used in your buildout, to create a script which searches particular packages for translation strings. This can be particularly useful for creating a single translations package which contains the translations for the set of packages which make up your application.
+
+Add the following to your buildout.cfg::
+
+    [translation]
+    recipe = infrae.i18nextract
+    packages =
+       myapplication.policy
+       myapplication .theme
+    output = ${buildout:directory}/src/myapplication.translation/myapplication/translation/locales
+    output-package = myapplication.translations
+    domain = mypackage
+
+Running the ./bin/translation-extract script will produce a .pot file in the specified output directory which can then be used to create the .po files for each translation:
+
+.. code-block:: sh
+
+   msginit --locale=fr --input=locales/mypackage.pot --output=locales/fr/LC_MESSAGES/mypackage.po
+
+The locales directory should contain a directory for each language, and a directory called LC_MESSAGES within each of these, followed by the corresponding .po files containing the translation strings:
+
+.. code-block:: sh
+   
+   ./locales/en/LC_MESSAGES/mypackage.po
+   ./locales/fi/LC_MESSAGES/mypackage.po
+   ./locales/ga/LC_MESSAGES/mypackage.po
+
+
 Marking translatable strings
 ============================
 
@@ -64,7 +95,8 @@ You also need to have the following ZCML entry:
         <i18n:registerTranslations directory="locales" />
 
     </configure>
-    
+
+
 After the set-up above you can use message factory to mark strings with translation domains.
 i18ndude translation utilities use underscore _ to mark translatable strings (gettext message ids).
 Message ids must be unicode strings.
@@ -73,12 +105,12 @@ Message ids must be unicode strings.
 
     from your.app.package import yourAppMessageFactory as _
 
-    my_translatable_text = _(u"My text") # my_text is zope.
+    my_translatable_text = _(u"My text")
 
 The object will still look like a string::
 
     >>> my_translatable_text
-    u'Test'
+    u'My text'
 
 But in reality it is zope.i18nmessageid.message.Message object.
 
@@ -87,6 +119,12 @@ But in reality it is zope.i18nmessageid.message.Message object.
 
     >>> my_translatable_text.domain
     'your.app.package'
+
+To see the translation:
+    
+    >>> from zope.i18n import translate
+    >>> translate(my_translatable_text)
+    u"The text of the translation." # This is the corresponding msgstr from the .po file
     
 For more information see
 
