--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -345,7 +345,8 @@ Here is a sample manual.pot file::
         "Preferred-Encodings: utf-8 latin1\n"
         "Domain: mfabrik.app\n"
         
-        
+        # This entry is used in gomobiletheme.mfabrik  templates for the campaign page header
+        # It is not automatically picked, since it is referred from external package        
         #. Default: "Watch video"
         msgid "watch_video"
         msgstr ""
