Note that PlacelessTranslationService was used for main plone translation catalog only until Plone 3.3.x.

--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -234,7 +234,7 @@ PlacessTranslationService
 
 * Stores .po files in *i18n* folder of your add-on product
 
-* Used for main "plone" translation catalog
+* Used for main "plone" translation catalog (until Plone 3.3.x)
 
 * Translation files are processed when Plone is restarted. Example: *i18n/yourapp-fi.po*.
 
