--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -257,6 +257,10 @@ generation of .mo files of your product .po files.
           environment-vars =
               zope_i18n_compile_mo_files true
 
+        Note that the value does not matter: the code in ``zope.i18n``
+        simply looks for the existence of the variable and does not
+        care what its value is.
+
         
 See  
 
