Started a document on how to contribute to Plone translations

--- a/source/i18n/index.txt
+++ b/source/i18n/index.txt
@@ -14,6 +14,7 @@ Plone has three different internationalization subsystems
 .. toctree::
     :maxdepth: 2
 
+    contribute_to_translations
     localization
     language
     translating_content
