Added how to have commit access and added support section pointing to plone-i18n mailing-list.

--- a/source/l10n/contribute_to_translations.txt
+++ b/source/l10n/contribute_to_translations.txt
@@ -1,5 +1,17 @@
+=====================================
 How to contribute to the translations
 =====================================
+
+.. admonition:: Description
+
+    How to contribute to the Plone translations.
+
+.. contents:: :local:
+
+First you need `commit access to collective repository
+<http://dev.plone.org/plone.org/wiki/SubversionAccess>`_ if you want
+to commit your translation.
+
 
 For Plone 4.0/4.1
 -----------------
@@ -39,7 +51,7 @@ Here you have the following directories:
   directory, you can add it to the plone5 variable in *experimental/i18n.cfg*,
   don't forget to add a line in *[sources]* if it's missing.
 
-If you do "svn info" in the locales directory, you'll see it is actually a svn external to:
+If you do `svn info` in the locales directory, you'll see it is actually a svn external to:
 https://svn.plone.org/svn/collective/PloneTranslations/trunk/locales
 
 Open the po file with poedit, kbabel or any other i18n tool. For example for
@@ -73,11 +85,17 @@ To update your translation, you can go to
 and
 *src/plone.app.locales/plone/app/locales/locales*
 
-If you do "svn info" in the i18n directory, you'll see it is actually a svn external to:
-https://svn.plone.org/svn/collective/PloneTranslations/branches/3.x/i18n
+If you do `svn info` in the i18n directory, you'll see it is actually a svn external to:
+*https://svn.plone.org/svn/collective/PloneTranslations/branches/3.x/i18n*
 
 
-Statistics
-----------
+Support
+-------
+
+Please ask questions to the `plone-i18n mailing-list <http://plone.org/support/forums/i18n>`_.
+
+
+Statistics for Plone 4
+----------------------
 
 http://www.transifex.net/projects/p/Plone/
