--- a/source/l10n/index.txt
+++ b/source/l10n/index.txt
@@ -2,8 +2,12 @@
 Localization (l10n)
 ===================
 
+.. admonition:: Description
+
+    Documentation related to Plone localization. You will find
+    here how to contribute to the Plone translations.
+
 .. toctree::
     :maxdepth: 2
 
     contribute_to_translations
-
